<resources>
    <string name="app_name">Scrabble +</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Pseudo</string>
    <string name="login">Connexion</string>
    <string name="register">Inscription</string>
    <string name="btn_link_to_register">Tu n\'as pas de compte? Inscris toi !</string>
    <string name="btn_link_to_login">Déjà inscrit! Connecte toi.</string>
    <string name="welcome">Bienvenue</string>
    <string name="logout">Se déconnecter</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="register_form">Formulaire d\'inscritpion</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="connection_form">Formulaire de connexion</string>
    <string name="party_creation">Création partie</string>
    <string name="resume_party">Parties en cours</string>
    <string name="join_party">Rejoindre une partie</string>
    <string-array name="choice_mode">
        <item>Mode 1</item>
        <item>Mode 2</item>
    </string-array>
    <string name="creation_name">Nom de la partie</string>
    <string name="creation_nb_player">Nombre de joueurs</string>
    <string name="creation_form_name">Création de partie</string>
    <string name="creation_mode">Mode de jeu</string>
    <string name="submit">Submit</string>
    <string name="lobby_password">---------</string>
    <string name="go">Go !</string>
    <string name="ours">Un ours</string>
    <string name="join">Saisissez un code pour rejoindre un groupe !</string>
    <string name="join_input">Code</string>
    <string name="party">Super partie</string>
    <string name="party_state">A toi de jouer, il te reste 15 min</string>
</resources>