<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lobby.LobbyActivity"
    android:padding="16dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobby_password"
        android:layout_marginBottom="16dp"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/lobbyCLMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lobbyCLMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="@drawable/button_border"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lobbyCLPlayer1"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/lobbyPlayerImg1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/bear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/ours"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/lobbyPlayerImg1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lobbyCLPlayer2"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lobbyCLPlayer1"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/lobbyPlayerImg2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/bear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/ours"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/lobbyPlayerImg2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lobbyCLPlayer3"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lobbyCLPlayer2"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/lobbyPlayerImg3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/bear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/ours"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/lobbyPlayerImg3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/lobbyButtonPlay"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_border"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobbyCLMain" />

</androidx.constraintlayout.widget.ConstraintLayout>